--- a/index.html
+++ b/index.html
@@ -1,39 +1,15 @@
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Login</title>
-        <link rel="stylesheet" href="css/login.css">
-    </head>
-    <body>
-      <div id="head">
-        <p><marquee behavior="alternate" direction="">Welcome to Libtech Signin</marquee>
-            
-        </p> 
-      </div>
-       <center>
-          <div>
-              <table>
-            <tr>
-               <td id="user">Username:</td>
-                <td >
-                <input type="text" placeholder="Enter your username">
-                </td>
-            </tr>
-            <br><br>
-            <tr>
-               <td id="pass">Password:</td>
-                <td>
-                     <input type="password" placeholder="Enter your password">
-                </td>
-            </tr>
-        </table>
-          <div>
-              <button> <a href="#">SignIn</a></button>
-          </div>
-           </div>
-       </center>
-        <div ><a href="#"><h3 id="forgot">Forgot Password ?</h3></a></div>  
-              
-    </body>
-    </html>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Gradient Background</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body id="gradient">
+	<h1>Background Generator</h1>
+	<input class="color1" type="color" name="color1" value="#00ff00">
+	<input class="color2" type="color" name="color2" value="#ff0000">
+	<h2>Current CSS Background</h2>
+	<h3></h3>
+	<script type="text/javascript" src="script.js"></script>
+</body>
+</html>
